--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^4.4.7",
     "clsx": "^2.1.1",
     "next": "14.2.20",
     "next-auth": "^5.0.0-beta.25",
