--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "chart.js": "^4.4.7",
     "clsx": "^2.1.1",
+    "highcharts": "^12.0.2",
+    "highcharts-react-official": "^3.2.1",
     "next": "14.2.20",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
