feat: New component with more than 1k data example

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
     "react-dom": "^18",
+    "react-window": "^1.8.10",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.5.5",
     "uvcanvas": "^0.2.2",
     "zod": "^3.24.1"
@@ -27,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-window": "^1.8.8",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.20",
