--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress:open": "npx cypress open"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -36,6 +37,7 @@
     "@types/react-dom": "^18",
     "@types/react-window": "^1.8.8",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
+    "cypress": "^13.16.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.20",
     "eslint-plugin-prettier": "^5.2.1",
