--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "cypress:open": "npx cypress open"
+    "cypress:open": "npx cypress open",
+    "test:e2e": "npx playwright test --ui"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -16,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.7",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "highcharts": "^12.0.2",
     "highcharts-react-official": "^3.2.1",
     "next": "14.2.20",
@@ -30,6 +32,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.49.1",
     "@trivago/prettier-plugin-sort-imports": "^5.2.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
